# Siphon-Audio-Engine

./: README.md  build.gradle.kts
src/main/cpp/: CMakeLists.txt  siphon_dsp_pipeline.cpp  siphon_engine.cpp  siphon_resampler.cpp  siphon_software_gain.cpp  siphon_software_gain.h  siphon_usb_driver.cpp  siphon_volume_controller.cpp
src/main/java/chromahub/rhythm/app/infrastructure/audio/siphon/: DirectBitDspEngine.kt  SiphonAudioFormat.kt  SiphonDescriptorParser.kt  SiphonDeviceCapabilities.kt  SiphonIsochronousEngine.kt  SiphonManager.kt  SiphonPermissionHandler.kt  SiphonSessionManager.kt  SiphonState.kt  SiphonUsbAudioSink.kt  SiphonUsbDriver.kt  VolumeController.kt
