cmake_minimum_required(VERSION 3.22.1)
project("siphon_engine")
find_library(log-lib log)
find_library(android-lib android)
set(LIBUSB_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/libusb)
add_library(usb-1.0 STATIC ${LIBUSB_ROOT}/libusb/core.c ${LIBUSB_ROOT}/libusb/descriptor.c ${LIBUSB_ROOT}/libusb/hotplug.c ${LIBUSB_ROOT}/libusb/io.c ${LIBUSB_ROOT}/libusb/sync.c ${LIBUSB_ROOT}/libusb/strerror.c ${LIBUSB_ROOT}/libusb/os/linux_usbfs.c ${LIBUSB_ROOT}/libusb/os/events_posix.c ${LIBUSB_ROOT}/libusb/os/threads_posix.c ${LIBUSB_ROOT}/libusb/os/linux_netlink.c)
target_include_directories(usb-1.0 PUBLIC ${LIBUSB_ROOT}/libusb ${LIBUSB_ROOT}/android ${LIBUSB_ROOT}/libusb/os)
target_compile_options(usb-1.0 PRIVATE -fvisibility=hidden -pthread)
target_link_libraries(usb-1.0 log)
add_library(siphon_engine SHARED siphon_engine.cpp siphon_software_gain.cpp siphon_dsp_pipeline.cpp siphon_volume_controller.cpp siphon_resampler.cpp)
target_compile_features(siphon_engine PRIVATE cxx_std_17)
target_compile_options(siphon_engine PRIVATE -O3 -ffast-math)
include_directories(${LIBUSB_ROOT}/libusb)
target_link_libraries(siphon_engine ${log-lib} ${android-lib} usb-1.0)
